--- a/templates/complaint/edit.html.twig
+++ b/templates/complaint/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Complaint{% endblock %}
 
 {% block body %}
-    <h1>Edit Complaint</h1>
+    <h1>Edit Complaint {{ complaint.id }}</h1>
 
     {{ include('complaint/_form.html.twig', {'button_label': 'Update'}) }}
 
