--- a/templates/complaint/index.html.twig
+++ b/templates/complaint/index.html.twig
@@ -24,7 +24,9 @@
                 <td>{{ complaint.createdAt ? complaint.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
                     <a href="{{ path('app_complaint_show', {'id': complaint.id}) }}">show</a>
-                    <a href="{{ path('app_complaint_edit', {'id': complaint.id}) }}">edit</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('app_complaint_edit', {'id': complaint.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
